syntax = "proto3";

option go_package = "pkg/api/client";
import "google/protobuf/timestamp.proto";

package api;

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message Input {
  repeated int32 values = 1;
}

message Message {
  int64 id = 1;
  int64 user_id = 2;
  int64 model_id = 3;
  int64 version_id = 4;
  repeated Input inputs = 5;
  repeated string results = 6;
  google.protobuf.Timestamp created_at = 7;
}

message SendMessageRequest {
  string request_id = 1;
  int64 user_id = 2;
  int64 model_id = 3;
  int64 version_id = 4;
  repeated Input inputs = 5;
}

message SendMessageResponse {
  repeated string results = 1;
}

message GetMessagesRequest {
  string request_id = 1;
  int64 user_id = 2;
  int64 model_id = 3;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}